# pytorch_dlprim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  README-build.md  README.md  mnist.py  pyproject.toml  test.py  tmp.comp
examples/cplus/: CMakeLists.txt
examples/cplus/infer_mobilenet/: infer_mobilenet.cpp
python/pytorch_vk/: __init__.py
src/: CLTensor.cpp  CLTensor.h  conv.cpp  conv_template.hpp  fill.cpp  gpu_kernel.cpp  hvol2col.hpp  im2col.cpp  loss_ops.cpp  norm_ops.cpp  pointwise_ops.cpp  python_iface.cpp  random_ops.cpp  registeration.cpp  softmax.cpp  softmax_impl.cpp  softmax_impl.hpp  tensor_ops.cpp  utils.cpp  utils.h  vision_ops.cpp
tests/: profilling notes  test_depthwise_dilation.py  test_group_norm.py  test_op.py  test_print.py  validate_network.py
